# giggle

./: .gitignore  readme.md  schema.sql  test_apigateway.py
apigateway/: README.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts  start.sh
apigateway/kotlin/com/giggle/translation/: TranslationApplication.kt
apigateway/kotlin/com/giggle/translation/common/: BaseController.kt
apigateway/kotlin/com/giggle/translation/config/: DatabaseConfig.kt  RedisConfig.kt
apigateway/kotlin/com/giggle/translation/controller/: NodeController.kt  TranslationController.kt
apigateway/kotlin/com/giggle/translation/dto/: CreateTaskRequest.kt  SourceType.kt  TaskResponse.kt
apigateway/kotlin/com/giggle/translation/model/: Node.kt  TranslationTask.kt
apigateway/kotlin/com/giggle/translation/service/: NodeHeartbeatListener.kt  NodeManagerService.kt  TaskDispatchService.kt  TranslationService.kt
apigateway/kotlin/com/giggle/translation/utils/: DistributedLock.kt  JacksonUtils.kt
apigateway/resources/: application.yml
whisper_service/: .env  config.py  main.py  pyproject.toml
whisper_service/models/: __init__.py  database.py
whisper_service/resources/: text.json
whisper_service/services/: database_service.py  node_manager.py  text_packer.py  translation_service.py  whisper_service.py
whisper_service/utils/: gpu_utils.py  logger.py
